Wed Mar 16 23:01:36 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c server/local_inotify.h: new patch from
	  John McCutchan to adapt to the latest change in kernel interface
	  hopefully the last one.

Tue Mar 15 14:15:58 CET 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c server/gam_channel.c: portability patch for
	  Mac OS X, add #include <sys/uio.h> bug gnome #170404

Tue Mar 15 13:46:44 CET 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in gamin.spec.in doc/gamin.html doc/news.html:
	  preparing release of 0.0.26

Tue Mar 15 13:05:54 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/gamin.html doc/news.html: typo
	* libgamin/fam.h: removed an incompatibility with SGI FAM #149822

Tue Mar 15 12:49:21 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: revisited the patch a bit.

Tue Mar 15 12:32:02 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_tree.c: a bit of cleanup, and avoiding potentially
	  expensive call g_node_n_children() when the operation should 
	  really be O(1)

Tue Mar 15 12:24:06 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: fixed the crash on failed tree assert bug #150471
	  based on the patch from Dean Brettle
	* tests/testing.c tests/result/10 tests/scenario/10.tst: integrated the
	  regression test provided by Dean Brettle

Fri Mar 11 10:30:46 CET 2005 Daniel Veillard <veillard@redhat.com>

	* README doc/gamin.html doc/overview.html: typo fix in the
	  documentation by Jean-Marc Coursimault

Mon Mar  7 11:16:10 CET 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/fam.h: gcc4 now breaks with #include "limits.h" from
	  FAM include, fixing #150169.

Tue Mar  1 18:53:58 CET 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in gamin.spec.in doc/gamin.html doc/news.html:
	  prepared release of 0.0.25

Tue Mar  1 18:17:06 CET 2005 Daniel Veillard <veillard@redhat.com>
